5.2/z52.css
body {
	position: relative;
	padding-top: 3.5rem;
	background-color: #f2f2f2;
	font: 16px "Maven Pro", sans-serif;
}

/* == Responsive Layout */
@media (min-width: 100rem) {
	.container {
	    max-width: 95rem;
	}
}

/* == Centre navbar items */
header .navbar {
	box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.3);
	background-color: #ff7300;
	color: #fff;
}
@media (min-width: 34em) {
	header .navbar {
		background-color: transparent;
		background-image: linear-gradient(0, rgba(255, 115, 0, 0.9), #ff7300);
		text-align: center;
	}
	.navbar-toggleable-xs {
		height: 2rem !important;
		text-align: center;
	}
	.navbar-brand, .navbar-nav, .navbar-nav .nav-item {
		display: inline-block;
		float: none;
		vertical-align: top;
	}
}
.navbar-toggler {
	padding: .5rem;
	margin-left: -.5rem;
}

pre {
	border-radius: 5px 5px 0 0;
}

pre {
	padding: 1rem;
	background-color: #fff;
	counter-reset: line;
}
pre > span, pre > code > span {
	counter-increment: line
}
pre span:before{
	content: counter(line);
	-webkit-user-select: none;
	   -moz-user-select: none;
	    -ms-user-select: none;
	        user-select: none;
}

/* PyroCarbon
/* -------------------------------------------------- */
.form-control:focus {
	border-color: #ff9940;
}


/* Side navbar
/* -------------------------------------------------- */

#sidenav {
	position: fixed;
	line-height: 1.5;
	top: 3.5rem;
}
.sidenav ul {
	list-style-type: none;
	margin: 0;
	padding: 0;
}
.sidenav .dropdown-toggle::after {
	display: none;
}
.sidenav a, .sidenav a.active {
	background-color: inherit;
	color: inherit;
}
.sidenav a:hover, .sidenav a.active:hover, .sidenav a.active:focus {
	background-color: hsl(  0,   0%,87.5%);
	color: inherit;
}
.sidenav > li > a {
	display: block;
	padding: 0.2rem 0.5rem;
	border-left: 0.2rem solid transparent;
}
.sidenav > li > a.active, .sidenav > li > a.active + ul li {
	background: hsl(  0,   0%,92.5%);
}
.sidenav > li > ul > li > a {
	padding: 0.2rem 0.5rem 0.2rem 1.5rem;
	padding-left: 1.5rem;
	border-left: 0.2rem solid transparent;
}
.sidenav > li > ul > li > a.active {
	border-left: 0.2rem solid #f60;
}

h1::before, h2::before, h3::before, h4::before {
  display: block;
  content: " ";
  margin-top: -4rem;
  height: 4rem;
  visibility: hidden;
}

